修改log配置文件